--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="https://img.freepik.com/premium-vector/minimalist-modern-kids-toy-simple-flat-icon-logo-template-vector-illustration-design-children-education-by-montessori-system-logo-concept_534135-459.jpg"
+    />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Kids Play</title>
   </head>
   <body>
     <div id="root"></div>
